# et

./: .clang-tidy  .clangformat  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.codex/: config.toml
benchmark/: benchmark.h
doc/: et_sparse.tex  presentation.tex  presentation_with_notes.tex
include/: et.hpp
modules/ctv/: multivector.ixx  sparse_vector_demo.ixx  special_values.ixx  value_set.ixx
test/: test_ctv_multivector_tests.cpp  test_ctv_sparse_vector_demo_tests.cpp  test_ctv_special_values_tests.cpp  test_ctv_value_set_tests.cpp
test/doctest/: main.cpp
test/gtest/: CMakeLists.txt  main.cpp
test/testutils/include/: demangle.hpp
